Sun May 30 18:45:46 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/URL.cc (normalizePath): Fix bug that caused endless loops
	and core dumps when normalizing URLs with more than one of
	( "/../" | "/./" | "//" | "%7E" )

Wed May 26 23:15:46 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/db.cc (mergeDB): Add patch contributed by Roman Dimov
	<roman@twist.mark-itt.ru> to fix problems with confusing docIDs,
	resulting in documents in main db removed when the corresponding
	DocID was supposed to be removed from the merged db.

Wed May 26 11:30:22 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.h, htsearch/Display.cc, htsearch/htsearch.cc:
	Switch restrict and excludes to use HtRegex instead of StringMatch.

	* htdig/htdig.cc (main): Fix typo clobbering setting of
	excludes. Obviously fixes problems with badquerystr and excludes!

	* htdig/HtHTTP.cc (ParseHeader): Change parsing to skip extra
	whitespace, as in 5/19 Document.cc(readHeader) change.

Wed May 19 22:17:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HtHTTP.cc, htdig/HtHTTP.h: Add new files, contributed by 
	Gabriele. A start at an HTTP/1.1 implementation.
	
	* htdig/Document.cc (readHeader): Fix change of 5/16 to actually
	work! :-) 

	* htsearch/Display.cc (expandVariables): Change end-of-expansion
	test to include states 2 and 5 to ensure templates ending in } are
	still properly expanded, as suggested by Gilles.

Mon May 17 14:31:31 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtRegex.cc (setEscaped): Use full list of characters to
	escape as suggested by Gilles.

Sun May 16 17:27:51 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc (readHeader): Since multiple whitespace
	characters are allowed after headers, don't use strtok.
	(readHeader): We no longer pretend to parse Word, PostScript, or
	PDF files internally.
	(getParsable): Don't generate PostScript or PDF objects since we